--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js --ignore '*.json'"
+    "dev": "nodemon server.js --ignore '*.json'",
+    "postinstall": "npm rebuild pg pg-hstore"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "ms": "^2.1.3",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   }
 }
