--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "node_modules/pg/**",
+                    "node_modules/pg-hstore/**"
+                ]
+            }
+        }
     ],
     "routes": [
       {
