--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,9 @@
             "config": {
                 "includeFiles": [
                     "node_modules/pg/**",
-                    "node_modules/pg-hstore/**"
+                    "node_modules/pg-hstore/**",
+                    "node_modules/pg-protocol/**",
+                    "node_modules/pg-pool/**"
                 ]
             }
         }
