--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js --ignore '*.json'",
     "postinstall": "npm rebuild pg --update-binary",
-    "vercel-build": "npm rebuild pg && npm run build"
+    "vercel-build": "npm install && npm rebuild pg",
+    "build": "echo \"No build needed\" && exit 0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^8.11.11",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "nodemon": "^3.1.9",
-    "pg": "^8.14.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "pg": "8.11.3",
+    "sequelize": "6.37.2"
   }
 }
