--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "node_modules/pg/**",
-                    "node_modules/pg-hstore/**",
-                    "node_modules/pg-protocol/**",
-                    "node_modules/pg-pool/**"
-                ]
-            }
-        }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
-    ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
