--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,16 @@
-{ "version": 2, "outputDirectory": "build", "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+    "version": 2,
+    "builds": [
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/server.js"
+        }
+    ]
+  }
+  
